@@ -1,3 +1,4 @@
+1/15/14 Solution: factor out pH calculations into static functions
 1/15/14 GraphIndicator: pickable=false for nodes that don't need to be involved in interactivity
 1/15/14 add invisible rectangle on top of graph indicator handle, so that space between handle and body isn't a dead zone
 1/15/14 tweak shadow on graph indicators so that they appear to float
